--- a/src/css/themes/common.variables.styl
+++ b/src/css/themes/common.variables.styl
@@ -15,7 +15,7 @@
 // to match your app's branding.
 
 $primary   = #3684bf
-$secondary = #B91764
+$secondary = #7d1ac4
 $tertiary  = #555
 
 $neutral   = #E0E1E2
